fixed welcome message (moved out of summary contatiner), small UI touch up (create plan button, garden alignment)

--- a/client/src/styles/home/Garden.css
+++ b/client/src/styles/home/Garden.css
@@ -3,16 +3,18 @@
 }
 .garden {
   padding-top: 10px;
-  position: center;
+
+
 }
 .garden_background {
   position: relative;
   width: 800px;
   height: 500px;
-  padding: 20px;
+  padding: 30px;
   background-image: url("./../../img/garden.png");
-  background-size: 800px 400px;
+  background-size: 100% 100%;
     background-repeat: no-repeat;
+    background-position: center;
 }
 .garden_background p {
     color: white;
