--- a/client/src/styles/home/SummaryBar.css
+++ b/client/src/styles/home/SummaryBar.css
@@ -4,7 +4,7 @@
   justify-content: space-around;
   align-items: center;
 
-  width: 90%;
+  width: 100%;
   height: 123px;
   padding: 20px;
 
