--- a/client/src/styles/overview/MiniPlan.css
+++ b/client/src/styles/overview/MiniPlan.css
@@ -1,8 +1,8 @@
 .card {
-  border: 1px solid lightgrey;
   margin: 1.5em;
-  border-radius: 10%;
+  border-radius: 30px;
   padding: 2em 0.4em;
+  box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.1), 0 6px 6px 0 rgba(0, 0, 0, 0.19);
 }
 
 .card-content {
