--- a/client/src/styles/overview/Overview.css
+++ b/client/src/styles/overview/Overview.css
@@ -22,11 +22,21 @@
   height: 100%;
 }
 
-.button {
-  border: 1px solid lightgrey;
+.button:hover {
+  border:3px solid #013220;
   border-radius: 5px;
   font-weight: bold;
   padding: 10px 50px;
-  background-color: lightgrey;
+  background-color: white;
+  color: #013220;
+  font-size: 1em;
+}
+.button {
+  border:3px solid #013220;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 10px 50px;
+  background-color: #013220;
+  color: white;
   font-size: 1em;
 }
